Fix Hub growing too large

--- a/src/scripts/components/Editor.scss
+++ b/src/scripts/components/Editor.scss
@@ -1,6 +1,9 @@
 @import '../../fonts/roboto.scss';
 @import '../../styles/main.scss';
 
+.h5p-hub {
+  max-width: 960px;
+}
 .bswrapper {
   font-family: 'H5PRoboto';
   font-size: 1rem;
